--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,9 @@ input[type=submit] {
     border: 1px solid black;
     width: 500px;
     height: 300px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
 }
 
 /* footer */
