--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ Jakarta, 02/06/2024
 /* navigasi */
 nav {
     display: flex;
-    background-color: aliceblue;
-    justify-content: space-between;
+    background-color: papayawhip;
+    justify-content: space-between;    
 }
 
 nav > section {
@@ -130,7 +130,18 @@ input[type=submit] {
     align-items: center;
 }
 
+#hasil-error {
+    color: red;
+}
+
 /* footer */
 footer p{
     text-align: right;
 }
+
+@media only screen and (max-width:600px) {
+    nav {
+        flex-direction: column;
+    }
+}
+
